--- a/blog/style.css
+++ b/blog/style.css
@@ -82,3 +82,50 @@ body
 	bottom: 0px;
 	width: 100%;
 }
+
+#content
+{
+	position: absolute;
+	top: 30px;
+	margin: 2%;
+	padding: 3%;
+	background-color: #e9e9e9;
+	z-index: 0;
+	box-shadow: 10px 10px 5px #888888;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #121212;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #008c96;
+}
+
+#footer
+{
+	position: absolute;
+	bottom: 0px;
+	height: 20px;
+	left: 0px;
+	right: 0px;
+	text-align: center;
+	background-color: #252525;
+	font-family: Helvetica;
+	color: #008c96;
+}
+
+@font-face
+{
+	   font-family: 'Century_gothic';
+    src: url('fonts/4365-webfont.eot');
+    src: url('fonts/4365-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/4365-webfont.woff') format('woff'),
+         url('fonts/4365-webfont.ttf') format('truetype'),
+         url('fonts/4365-webfont.svg#century_gothicregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
