--- a/website/style.css
+++ b/website/style.css
@@ -88,7 +88,8 @@ body
 	position: absolute;
 	top: 30px;
 	margin: 2%;
-	background-color: #ffffff;
+	padding: 3%;
+	background-color: #e9e9e9;
 	z-index: 0;
 	box-shadow: 10px 10px 5px #888888;
 }
