--- a/blog/style.css
+++ b/blog/style.css
@@ -118,6 +118,19 @@ body
 	color: #008c96;
 }
 
+.post
+{
+	background-color: yellow;
+	margin: 10px;
+	padding: 10px;
+}
+
+.post_title
+{
+	font-weight: bold;
+	font-size: 20px;
+}
+
 @font-face
 {
 	   font-family: 'Century_gothic';
