--- a/blog/style.css
+++ b/blog/style.css
@@ -1,13 +1,14 @@
 body
 {
 	overflow: auto;
-	-webkit-font-smoothing: antialiased;
 }
 
 *
 {
 	padding: 0px;
 	margin: 0px;
+	-webkit-font-smoothing: antialiased;
+	font-family: Century_gothic, Arial, sans-serif;
 }
 
 #nav
@@ -120,7 +121,7 @@ body
 
 .post
 {
-	background-color: yellow;
+	background-color: #b1d1d1;
 	margin: 10px;
 	padding: 10px;
 }
@@ -129,6 +130,15 @@ body
 {
 	font-weight: bold;
 	font-size: 20px;
+}
+
+.post_hr
+{
+	position: static;
+	height: 3px;
+	width: 50%;
+	float: left;
+	background-color: #008c96;
 }
 
 @font-face
